# x64dbg-automate-pyclient-plus

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  pyproject.toml  securom_attack.py
Plans/: Axon_MCP_Priority_List.md
docs_custom/: AXON_EXECUTION_ARCHITECTURE.md  STRESS_TEST_PROTOCOL.md
tests/: test_api_runtime.py  test_hla_commands.py  test_mcp_server.py
x64dbg_automate/: __init__.py  commands_xauto.py  dbg_paths.py  events.py  hla_xauto.py  mcp_server.py  models.py
x64dbg_automate/api_runtime/: __init__.py  api_analysis.py  api_antidebug.py  api_composite.py  api_control.py  api_coverage.py  api_decompiler.py  api_dump.py  api_exceptions.py  api_fleet.py  api_infrastructure.py  api_macros.py  api_memory.py  api_patches.py  api_sandbox.py  api_symbols.py  api_workflow.py  debugger_state.py  execution_context.py  registry.py  responses.py  runtime_helpers.py  semantic_memory.py  supervisor.py  timeout_retry.py  tool_gateway.py  utils.py
x64dbg_automate/workflows/: __init__.py  protected_extract.py  securom_extract.py
