[project]
name = "x64dbg_automate"
version = "0.7.6"
description = "A Python library to automate x64dbg"
authors = [{ name = "Darius Houle", email = "darius@x64.ooo" }]
readme = "README.md"
keywords = ["x64dbg", "debugger", "instrumentation", "plugin", "dynamic-analysis"]

[project.urls]
Homepage = "https://dariushoule.github.io/x64dbg-automate-pyclient/"
Repository = "https://github.com/dariushoule/x64dbg-automate-pyclient"
Issues = "https://github.com/dariushoule/x64dbg-automate-pyclient/issues"

[tool.poetry.dependencies]
python = "^3.10"
pyzmq = "^27.1.0"
msgpack = "^1.1.0"
pydantic = "^2.10.6"
psutil = "^6.1.1"
mcp = {version = "^1.26.0", optional = true}
lief = "^0.17.0"
pefile = "^2024.8.26"
capstone = "^5.0.0"
pywin32 = "^308"
memprocfs = "^5.17.0"

[tool.poetry.extras]
mcp = ["mcp"]
yara = ["yara-python"]

[tool.poetry.scripts]
x64dbg-automate-mcp = "x64dbg_automate.mcp_server:main"
automate-extract = "x64dbg_automate.workflows.securom_extract:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.28.0"}
mkdocs = "^1.6.1"
mkdocs-autorefs = "^1.3.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
